<resources>
    <string name="app_name">Calculator And Dice</string>
    <string name="result">0</string>
    <string name="img_icon">IMG Icon</string>
    <string name="calculator">Simple Calculator</string>
    <string name="dice">Simple Roll Dice</string>

    <!-- Button Linear 1 -->
    <string name="CE">CE</string>
    <string name="c">C</string>
    <string name="divide">/</string>

    <!-- Button Linear 2 -->
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="times">X</string>

    <!-- Button Linear 3 -->
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="plus">+</string>

    <!-- Button Linear 4 -->
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="minus">-</string>

    <!-- Button Linear 5 -->
    <string name="mod">%</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="roll_dice">ROLL DICE</string>
</resources>